# Pixie

./: meson.build
src/: .pixie-application.cpp.swp  .pixie-pencil.cpp.swp  .pixie-rect.cpp.swp  pixie-application.cpp  pixie-application.hpp  pixie-bomb.cpp  pixie-bomb.hpp  pixie-color-sampler.cpp  pixie-color-sampler.hpp  pixie-coord.cpp  pixie-coord.hpp  pixie-coordf.cpp  pixie-coordf.hpp  pixie-document.cpp  pixie-document.hpp  pixie-eraser.cpp  pixie-eraser.hpp  pixie-layer.cpp  pixie-layer.hpp  pixie-pencil.cpp  pixie-pencil.hpp  pixie-rect.cpp  pixie-rect.hpp  pixie-rectf.cpp  pixie-rectf.hpp  pixie-rgba.cpp  pixie-rgba.hpp  pixie-session.cpp  pixie-session.hpp  pixie-sprite-editor.cpp  pixie-sprite-editor.hpp  pixie-sprite.cpp  pixie-sprite.hpp  pixie-tool.hpp  pixie-transform.hpp  pixie-transformf.hpp  pixie-window.cpp  pixie-window.hpp  pixie.cpp  pixie.cpp~  (+1 more)
src/resources/: pixie.gresources.xml
src/resources/ui/: pixie-headerbar.ui  pixie-menubar.ui  pixie-session.ui  pixie-window-menu.ui
